 [build-system]
 requires = ["setuptools>=82.0.1"]
 build-backend = "setuptools.build_meta"

 [tool.setuptools]
 include-package-data = true

 [tool.setuptools.packages.find]
 where = ["."]
 include = ["darkelf_osint_lite*"]

 [project]
 name = "darkelf-osint-lite"
 version = "3.0.1"
 description = "Privacy-focused CLI research and OSINT toolkit with optional Tor, AI, Internet Archive, WHOIS, DNS, and DuckDuckGo integration."

 readme = "README.md"

 license = { file = "LICENSE.md" }

 requires-python = ">=3.11"

 authors = [
     { name = "Dr. Kevin Moore" }
 ]

 keywords = [
     "osint",
     "research",
     "privacy",
     "tor",
     "duckduckgo",
     "internet-archive",
     "whois",
     "dns",
     "terminal",
     "cli",
     "security",
     "forensics",
     "investigation",
 ]

 dependencies = [
     "requests>=2.32",
     "beautifulsoup4>=4.12",
     "rich>=13.9",
     "urllib3>=2.5",
     "tldextract>=5.3",
     "python-whois>=0.9",
     "dnspython>=2.8",
     "stem>=1.8",
     "PySocks>=1.7",
     "pyperclip>=1.9",
     "pdfkit>=1.0",
     "weasyprint>=66.0",
 ]

 classifiers = [
     "Development Status :: 5 - Production/Stable",

     "Intended Audience :: Developers",
     "Intended Audience :: Information Technology",
     "Intended Audience :: System Administrators",
     "Intended Audience :: Science/Research",

     "Environment :: Console",

     "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",

     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",

     "Operating System :: MacOS",
     "Operating System :: Microsoft :: Windows",
     "Operating System :: POSIX :: Linux",

     "Topic :: Internet",
     "Topic :: Internet :: WWW/HTTP",
     "Topic :: Security",
     "Topic :: Scientific/Engineering :: Information Analysis",
     "Topic :: Utilities",
 ]

 [project.urls]
 Homepage = "https://github.com/Darkelf-Labs/darkelf-research-suite"
 Repository = "https://github.com/Darkelf-Labs/darkelf-research-suite"
 Issues = "https://github.com/Darkelf-Labs/darkelf-research-suite/issues"

 [project.optional-dependencies]

 ai = [
     "ollama>=0.6"
 ]

 dev = [
     "ruff>=0.13",
     "build>=1.3",
     "twine>=6.2",
     "pytest>=8.4",
 ]

 [project.scripts]
 darkelf-research = "darkelf_research_suite:main"

 [tool.ruff]
 line-length = 127
 target-version = "py311"

 [tool.ruff.lint]
 select = ["E", "F"]

 [tool.ruff.lint.per-file-ignores]
 "main.py" = ["E402"]
