[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["darkelf_osint_lite*"]

[project]
name = "darkelf-osint-lite"
version = "3.0.4"
description = "Privacy-focused CLI OSINT toolkit with Tor-aware networking, WHOIS, DNS, indicator extraction, and optional local AI reporting."
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.11"

authors = [
    { name = "Dr. Kevin Moore" }
]

keywords = [
    "osint",
    "privacy",
    "tor",
    "whois",
    "dns",
    "security",
    "forensics",
    "investigation",
    "terminal",
    "cli",
    "research",
]

dependencies = [
    "beautifulsoup4>=4.12",
    "dnspython>=2.8",
    "phonenumbers>=9.0",
    "psutil>=7.0",
    "PySocks>=1.7",
    "python-whois>=0.9",
    "requests>=2.32",
    "rich>=13.9",
    "stem>=1.8",
    "tldextract>=5.3",
    "urllib3>=2.5",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",

    "Environment :: Console",

    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",

    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Darkelf-Labs/darkelf-osint-lite"
Repository = "https://github.com/Darkelf-Labs/darkelf-osint-lite"
Issues = "https://github.com/Darkelf-Labs/darkelf-osint-lite/issues"

[project.optional-dependencies]

ai = [
    "ollama>=0.6",
]

dev = [
    "build>=1.3",
    "pytest>=8.4",
    "ruff>=0.13",
    "twine>=6.2",
]

[project.scripts]
darkelf-osint-lite = "darkelf_osint_lite:main"

[tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["E402"]
